--- a/ThemeZA.css
+++ b/ThemeZA.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url("https://cdn.discordapp.com/attachments/1024881699307388988/1136767943770902538/1325159.png");
+  background-image: url("https://i.imgur.com/2mJHhXM.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center center;
